srvthreds/infrastructure/cloud/kubernetes/manifests/base/mongo-repl-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-repl-1
  namespace: srvthreds
  labels:
    app: mongo-repl-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-repl-1
  template:
    metadata:
      labels:
        app: mongo-repl-1
    spec:
      containers:
        - name: mongo-repl-1
          image: mongo:7
          imagePullPolicy: IfNotPresent
          command: ["mongod", "--replSet", "rs0", "--bind_ip_all"]
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: 500m
          volumeMounts:
            - name: mongo-repl-1-storage-0
              mountPath: /data/db
      volumes:
        - name: mongo-repl-1-storage-0
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-repl-1-service
  namespace: srvthreds
  labels:
    app: mongo-repl-1
spec:
  type: ClusterIP
  selector:
    app: mongo-repl-1
  ports:
    - name: default
      port: 27017
      targetPort: 27017
