srvthreds/infrastructure/cloud/kubernetes/manifests/base/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: srvthreds
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: management
          resources:
            requests:
              memory: 256Mi
              cpu: 150m
            limits:
              memory: 512Mi
              cpu: 300m
          volumeMounts:
            - name: rabbitmq-storage-0
              mountPath: /var/lib/rabbitmq
            - name: rabbitmq-storage-1
              mountPath: /var/log/rabbitmq
      volumes:
        - name: rabbitmq-storage-0
          emptyDir: {}
        - name: rabbitmq-storage-1
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: srvthreds
  labels:
    app: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
