srvthreds/infrastructure/cloud/kubernetes/manifests/base/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: srvthreds
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 200m
          command:
            - redis-server
            - '--save'
            - '20'
            - '1'
            - '--loglevel'
            - warning
            - '--notify-keyspace-events'
            - KA
          volumeMounts:
            - name: redis-storage-0
              mountPath: /data
      volumes:
        - name: redis-storage-0
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: srvthreds
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: default
      port: 6379
      targetPort: 6379
